# LitheumMobileWallet

./: INSTALLATION.md  README.md  justfile  pubspec.yaml
.github/: settings.yml
.github/workflows/: rust.yml  scheduled-audit.yml  telegram_bot.yml
android/: gradle.properties
lib/: bridge_definitions.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  ffi.dart  main.dart  routes.dart
lib/features/account/: home_screen.dart
lib/models/: app_state.dart  dispatcher.dart  phase_info.dart
macos/Runner/: bridge_generated.h
native/: Cargo.toml
native/src/: api.rs  bridge_generated.rs  bridge_generated.web.rs  error_types.rs  lib.rs  sdk.rs  utils.rs
